--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@angular/compiler": "~9.1.1",
     "@angular/core": "~9.1.1",
     "@angular/forms": "~9.1.1",
+    "@angular/localize": "~9.1.1",
     "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
     "@ctrl/ngx-codemirror": "^4.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^6.2.0",
+    "bootstrap": "^4.4.0",
     "codemirror": "^5.57.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
