--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bootstrap": "^4.4.0",
     "codemirror": "^5.57.0",
     "rxjs": "~6.5.4",
+    "sweetalert2": "^10.0.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
