--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ng-bootstrap/ng-bootstrap": "^6.2.0",
     "bootstrap": "^4.4.0",
     "codemirror": "^5.57.0",
+    "d3-graphviz": "^3.1.0",
     "rxjs": "~6.5.4",
     "sweetalert2": "^10.0.2",
     "tslib": "^1.10.0",
