--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@ng-bootstrap/ng-bootstrap": "^6.2.0",
+    "angular-webstorage-service": "^1.0.2",
     "bootstrap": "^4.4.0",
     "codemirror": "^5.57.0",
     "d3-graphviz": "^3.1.0",
+    "ngx-webstorage-service": "^4.1.0",
     "rxjs": "~6.5.4",
     "sweetalert2": "^10.0.2",
     "tslib": "^1.10.0",
