--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "jison": "jison ./src/app/Components/editor/parser/Grammar/Grammar.jison && mv Grammar.js ./src/app/Components/editor/parser/Grammar/"
   },
   "private": true,
   "dependencies": {
@@ -35,7 +36,8 @@
     "rxjs": "~6.5.4",
     "sweetalert2": "^10.0.2",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "jison": "^0.4.18"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.1",
